Cleanup single-origin.yml syntax

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -22,7 +22,7 @@
 #     ]
 # }
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
+Description: >-
   Creates a CloudFront distribution with a single origin (either web or S3)
 Conditions:
   HasCloudFrontDefaultRootObject: !Not [!Equals [!Ref CloudFrontDefaultRootObject, ""]]
@@ -133,28 +133,28 @@ Parameters:
     Type: String
     AllowedPattern: ^.+$
     ConstraintDescription: must not be blank
-    Description: >
+    Description: >-
       The value used for the Project tag on resources that support tagging.
   Cnames:
     Type: CommaDelimitedList
-    Description: >
+    Description: >-
       (optional) The CNAMEs (alternate domain names) for the distribution, as a
       comma-delimited list (e.g. "cdn1.example.com,cdn2.example.com")
   OriginDomain:
     Type: String
     AllowedPattern: ^.+\.[a-zA-Z]+$
-    ConstraintDescription: >
+    ConstraintDescription: >-
       must be a hostname or of the format mybucket.s3.amazonaws.com
-    Description: >
+    Description: >-
       The DNS name of the Amazon Simple Storage Service (S3) bucket or the HTTP
       server from which you want CloudFront to get objects for this origin.
       (e.g. "example.com" or "mybucket.s3.amazonaws.com")
   OriginPath:
     Type: String
     AllowedPattern: ^$|^\/..+(?<!\/)$
-    ConstraintDescription: >
+    ConstraintDescription: >-
       must start with a slash and must not end with a slash
-    Description: >
+    Description: >-
       (optional) The path that CloudFront uses to request content from an S3
       bucket or custom origin. The combination of the DomainName and OriginPath
       properties must resolve to a valid path. The value must start with a slash
@@ -162,26 +162,26 @@ Parameters:
   CloudFrontLoggingBucket:
     Type: String
     AllowedPattern: ^$|^.+\.s3\..+\.amazonaws\.com$
-    ConstraintDescription: >
+    ConstraintDescription: >-
       must be of the format mybucket.s3.amazonaws.com
-    Description: >
+    Description: >-
       (optional) The Amazon S3 bucket address where access logs are stored for
       CloudFront. (e.g., mybucket.s3.amazonaws.com)
   CloudFrontLoggingBucketPrefix:
     Type: String
-    Description: >
+    Description: >-
       (optional) A prefix for the access log file names for the CloudFront
       distribution. (e.g., myprefix/)
   CloudFrontComment:
     Type: String
     AllowedPattern: ^.+$
     ConstraintDescription: must not be blank
-    Description: >
+    Description: >-
       Any comments that you want to include about the CloudFront distribution
     MaxLength: 128
   CloudFrontDefaultTtl:
     Type: String
-    Description: >
+    Description: >-
       (optional) The default amount of time, in seconds, that you want objects
       to stay in CloudFront caches before CloudFront forwards another request
       to your origin to determine whether the object has been updated. The
@@ -190,13 +190,13 @@ Parameters:
       Expires to objects.
   CloudFrontMinTtl:
     Type: String
-    Description: >
+    Description: >-
       (optional) The minimum amount of time, in seconds, that you want objects
       to stay in CloudFront caches before CloudFront forwards another request
       to your origin to determine whether the object has been updated.
   CloudFrontMaxTtl:
     Type: String
-    Description: >
+    Description: >-
       (optional) The maximum amount of time, in seconds, that you want objects
       to stay in CloudFront caches before CloudFront forwards another request
       to your origin to determine whether the object has been updated. The
@@ -205,7 +205,7 @@ Parameters:
       objects.
   CloudFrontPriceClass:
     Type: String
-    Description: >
+    Description: >-
       The price class that corresponds with the maximum price that you want to
       pay for CloudFront service.
     Default: PriceClass_All
@@ -216,14 +216,14 @@ Parameters:
   CloudFrontDefaultRootObject:
     Type: String
     Default: index.html
-    Description: >
+    Description: >-
       Optional. The object that you want CloudFront to return (for example,
       index.html) when a viewer request points to your root URL
       (http://www.example.com) instead of to a specific object in your
       distribution (http://www.example.com/index.html).
   CloudFrontAllowedMethods:
     Type: CommaDelimitedList
-    Description: >
+    Description: >-
       HTTP methods that CloudFront processes and forwards to your Amazon S3 bucket or your custom origin.
     Default: "HEAD,GET"
     AllowedValues:
@@ -232,7 +232,7 @@ Parameters:
       - "DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT"
   CloudFrontCachedMethods:
     Type: CommaDelimitedList
-    Description: >
+    Description: >-
       HTTP methods for which CloudFront caches responses.
     Default: "HEAD,GET"
     AllowedValues:
@@ -240,7 +240,7 @@ Parameters:
       - "GET,HEAD,OPTIONS"
   CloudFrontCompress:
     Type: String
-    Description: >
+    Description: >-
       Whether you want CloudFront to automatically compress certain files.
     Default: "True"
     AllowedValues:
@@ -248,7 +248,7 @@ Parameters:
       - "False"
   CloudFrontOriginAccess:
     Type: String
-    Description: >
+    Description: >-
       Create an origin access identity which can be used to grant the CloudFront
       distribution access to an S3 bucket via a bucket policy. Only use this
       when the origin is an S3 bucket. The Comment is required when an origin
@@ -260,7 +260,7 @@ Parameters:
       - 'No'
   CloudFrontOriginProtocolPolicy:
     Type: String
-    Description: >
+    Description: >-
       The origin protocol policy to apply to your origin
     Default: https-only
     AllowedValues:
@@ -269,7 +269,7 @@ Parameters:
       - https-only
   CloudFrontViewerProtocolPolicy:
     Type: String
-    Description: >
+    Description: >-
       The protocol that viewers can use to access the files in the origin
     Default: redirect-to-https
     AllowedValues:
@@ -278,20 +278,20 @@ Parameters:
       - https-only
   CloudFrontCustom403ErrorResponseCode:
     Type: String
-    Description: >
+    Description: >-
       (optional) A custom HTTP response code to return when a 403 is returned
       by the origin
   CloudFrontCustom403ErrorResponsePagePath:
     Type: String
-    Description: >
+    Description: >-
       (optional) A custom page to return when a 403 is returned by the origin
   CloudFrontWebACLId:
     Type: String
-    Description: >
+    Description: >-
       (optional) The AWS WAF web ACL to associate with this distribution
   AcmCertificateArn:
     Type: String
-    Description: >
+    Description: >-
       (optional) ARN for the ACM certificate that will be used with the
       CloudFront distribution. If no value is supplied, a new certificate will
       be created.
@@ -299,7 +299,7 @@ Resources:
   # ACM Certificate
   # This gets created when no ARN for a pre-existing certificate is provided
   Certificate:
-    Type: "AWS::CertificateManager::Certificate"
+    Type: AWS::CertificateManager::Certificate
     Condition: CreateCertificate
     Properties:
       DomainName: !Select [0, !Ref Cnames]
@@ -308,14 +308,14 @@ Resources:
         - Key: Project
           Value: !Ref ProjectTag
         - Key: Name
-          Value: !Sub "${AWS::StackName} ${AWS::Region}"
+          Value: !Sub ${AWS::StackName} ${AWS::Region}
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       ValidationMethod: DNS
   CloudFrontDistribution:
-    Type: "AWS::CloudFront::Distribution"
+    Type: AWS::CloudFront::Distribution
     Properties:
       DistributionConfig:
         Aliases: !If [HasCnames, !Ref Cnames, !Ref "AWS::NoValue"]
@@ -331,7 +331,7 @@ Resources:
           AllowedMethods: !Ref CloudFrontAllowedMethods
           CachedMethods: !Ref CloudFrontCachedMethods
           Compress: !If [HasCloudFrontCompress, true, false]
-          DefaultTTL: !If [HasCloudFrontDefaultTtl, !Ref "CloudFrontDefaultTtl", !Ref "AWS::NoValue"]
+          DefaultTTL: !If [HasCloudFrontDefaultTtl, !Ref CloudFrontDefaultTtl, !Ref "AWS::NoValue"]
           ForwardedValues:
             # Cookies:
             #   Cookies
@@ -340,14 +340,14 @@ Resources:
             QueryString: false
             # QueryStringCacheKeys:
           # LambdaFunctionAssociations:
-          MaxTTL: !If [HasCloudFrontMaxTtl, !Ref "CloudFrontMaxTtl", !Ref "AWS::NoValue"]
-          MinTTL: !If [HasCloudFrontMinTtl, !Ref "CloudFrontMinTtl", !Ref "AWS::NoValue"]
+          MaxTTL: !If [HasCloudFrontMaxTtl, !Ref CloudFrontMaxTtl, !Ref "AWS::NoValue"]
+          MinTTL: !If [HasCloudFrontMinTtl, !Ref CloudFrontMinTtl, !Ref "AWS::NoValue"]
           # SmoothStreaming: Boolean
           TargetOriginId: web-origin
           # TrustedSigners:
           #   - String
           ViewerProtocolPolicy : !Ref CloudFrontViewerProtocolPolicy
-        DefaultRootObject: !If [HasCloudFrontDefaultRootObject, !Ref "CloudFrontDefaultRootObject", !Ref "AWS::NoValue"]
+        DefaultRootObject: !If [HasCloudFrontDefaultRootObject, !Ref CloudFrontDefaultRootObject, !Ref "AWS::NoValue"]
         Enabled: true
         HttpVersion: http2
         IPV6Enabled: true
@@ -356,13 +356,13 @@ Resources:
             - HasCloudFrontLoggingBucket
             - Bucket: !Ref CloudFrontLoggingBucket
               IncludeCookies: false
-              Prefix: !If [HasCloudFrontLoggingBucketPrefix, !Ref "CloudFrontLoggingBucketPrefix", !Ref "AWS::NoValue"]
-            - !Ref "AWS::NoValue"
+              Prefix: !If [HasCloudFrontLoggingBucketPrefix, !Ref CloudFrontLoggingBucketPrefix, !Ref "AWS::NoValue"]
+            - !Ref AWS::NoValue
         Origins:
           - CustomOriginConfig:
               !If
                 - HasCloudFrontOriginAccess
-                - !Ref "AWS::NoValue"
+                - !Ref AWS::NoValue
                 - HTTPSPort: 443
                   # HTTPPort: Integer
                   OriginProtocolPolicy: !Ref CloudFrontOriginProtocolPolicy
@@ -374,12 +374,12 @@ Resources:
             Id: web-origin
             # OriginCustomHeaders:
             #   - OriginCustomHeader
-            OriginPath: !If [HasOriginPath, !Ref "OriginPath", !Ref "AWS::NoValue"]
+            OriginPath: !If [HasOriginPath, !Ref OriginPath, !Ref "AWS::NoValue"]
             S3OriginConfig:
               !If
                 - HasCloudFrontOriginAccess
-                - OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
-                - !Ref "AWS::NoValue"
+                - OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}
+                - !Ref AWS::NoValue
         PriceClass: !Ref CloudFrontPriceClass
         # Restrictions:
         #   Restriction
@@ -391,8 +391,8 @@ Resources:
               # IamCertificateId: String
               # MinimumProtocolVersion: String
               SslSupportMethod: sni-only
-            - !Ref "AWS::NoValue"
-        WebACLId: !If [HasCloudFrontWebACLId, !Ref "CloudFrontWebACLId", !Ref "AWS::NoValue"]
+            - !Ref AWS::NoValue
+        WebACLId: !If [HasCloudFrontWebACLId, !Ref CloudFrontWebACLId, !Ref "AWS::NoValue"]
       Tags:
         - Key: Project
           Value: !Ref ProjectTag
@@ -401,7 +401,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
   CloudFrontOriginAccessIdentity:
-    Type: "AWS::CloudFront::CloudFrontOriginAccessIdentity"
+    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
     Condition: HasCloudFrontOriginAccess
     Properties:
       CloudFrontOriginAccessIdentityConfig:
