Remove special casing for us-east-1 AZs

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -217,7 +217,7 @@ Resources:
     Type: "AWS::EC2::Subnet"
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
+      AvailabilityZone: !Join ["", [!Ref "AWS::Region", b]]
       CidrBlock: 10.0.2.0/24
       Tags:
         - Key: Project
@@ -234,7 +234,7 @@ Resources:
     Type: "AWS::EC2::Subnet"
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
+      AvailabilityZone: !Join ["", [!Ref "AWS::Region", c]]
       CidrBlock: 10.0.3.0/24
       Tags:
         - Key: Project
