--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -34,7 +34,7 @@ Parameters:
     Type: String
 Resources:
   VPC:
-    Type: AWS::EC2::VPC
+    Type: "AWS::EC2::VPC"
     Properties:
       CidrBlock: 10.0.0.0/16
       EnableDnsSupport: true
@@ -51,6 +51,13 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+  IPv6VCPCidrBlock:
+    Type: "AWS::EC2::VPCCidrBlock"
+    Properties:
+      VpcId: !Ref VPC
+      AmazonProvidedIpv6CidrBlock: true
+
+  # Internet gateways
   InternetGateway:
     Type: "AWS::EC2::InternetGateway"
     Properties:
@@ -70,6 +77,8 @@ Resources:
     Properties:
       VpcId: !Ref VPC
       InternetGatewayId: !Ref InternetGateway
+
+  # Routing for public subnets
   RouteTable:
     Type: "AWS::EC2::RouteTable"
     Properties:
@@ -92,6 +101,14 @@ Resources:
       RouteTableId: !Ref RouteTable
       GatewayId: !Ref InternetGateway
       DestinationCidrBlock: 0.0.0.0/0
+  IPv6Route:
+    Type: "AWS::EC2::Route"
+    Properties:
+      DestinationIpv6CidrBlock: ::/0
+      GatewayId: !Ref InternetGateway
+      RouteTableId: !Ref RouteTable
+
+  # VPC endpoints
   S3Endpoint:
     Type: "AWS::EC2::VPCEndpoint"
     Properties:
@@ -196,12 +213,16 @@ Resources:
         - !Ref Subnet3
       VpcEndpointType: Interface
       VpcId: !Ref VPC
+
+  # Public subnets
   Subnet1:
     Type: "AWS::EC2::Subnet"
+    DependsOn: IPv6VCPCidrBlock
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
-      CidrBlock: 10.0.1.0/24
+      AvailabilityZone: !Select [0, !GetAZs ""]
+      CidrBlock: !Select [0, !Cidr [!GetAtt VPC.CidrBlock, 3, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -215,10 +236,12 @@ Resources:
           Value: !Ref AWS::StackId
   Subnet2:
     Type: "AWS::EC2::Subnet"
+    DependsOn: IPv6VCPCidrBlock
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Join ["", [!Ref "AWS::Region", b]]
-      CidrBlock: 10.0.2.0/24
+      AvailabilityZone: !Select [1, !GetAZs ""]
+      CidrBlock: !Select [1, !Cidr [!GetAtt VPC.CidrBlock, 3, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -232,10 +255,12 @@ Resources:
           Value: !Ref AWS::StackId
   Subnet3:
     Type: "AWS::EC2::Subnet"
+    DependsOn: IPv6VCPCidrBlock
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Join ["", [!Ref "AWS::Region", c]]
-      CidrBlock: 10.0.3.0/24
+      AvailabilityZone: !Select [2, !GetAZs ""]
+      CidrBlock: !Select [3, !Cidr [!GetAtt VPC.CidrBlock, 3, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
           Value: platform.prx.org
