--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -287,6 +287,8 @@ Resources:
     Properties:
       SubnetId: !Ref Subnet3
       RouteTableId: !Ref RouteTable
+
+  # Network ACL
   NetworkAcl:
     Type: AWS::EC2::NetworkAcl
     Properties:
@@ -302,7 +304,9 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-  InboundHTTPSNetworkAclEntry:
+
+  # ACL inbound rules
+  InboundIPv4HTTPSNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -314,7 +318,20 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 100
-  InboundHTTPNetworkAclEntry:
+  InboundIPv6HTTPSNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 6 # TCP
+      RuleAction : allow
+      RuleNumber : 101
+
+  InboundIPv4HTTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -325,8 +342,21 @@ Resources:
         To: 80
       Protocol: 6 # TCP
       RuleAction : allow
-      RuleNumber : 101
-  InboundUDPHTTPSNetworkAclEntry:
+      RuleNumber : 110
+  InboundIPv6HTTPNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 80
+        To: 80
+      Protocol: 6 # TCP
+      RuleAction : allow
+      RuleNumber : 111
+
+  InboundIPv4UDPHTTPSNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -337,8 +367,21 @@ Resources:
         To: 443
       Protocol: 17 # UDP
       RuleAction : allow
-      RuleNumber : 110
-  InboundUDPHTTPNetworkAclEntry:
+      RuleNumber : 120
+  InboundIPv6UDPHTTPSNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 121
+
+  InboundIPv4UDPHTTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -349,8 +392,21 @@ Resources:
         To: 80
       Protocol: 17 # UDP
       RuleAction : allow
-      RuleNumber : 111
-  InboundSSHNetworkAclEntry:
+      RuleNumber : 130
+  InboundIPv6UDPHTTPNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 80
+        To: 80
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 131
+
+  InboundIPv4SSHNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -362,7 +418,20 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 200
-  InboundUDPSSHNetworkAclEntry:
+  InboundIPv6SSHNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 6 # TCP
+      RuleAction : allow
+      RuleNumber : 201
+
+  InboundIPv4UDPSSHNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -374,7 +443,20 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 210
-  InboundNTPNetworkAclEntry:
+  InboundIPv6UDPSSHNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 211
+
+  InboundIPv4NTPNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -386,7 +468,20 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 220
-  InboundReturnTrafficNetworkAclEntry:
+  InboundIPv6NTPNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 123
+        To: 123
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 221
+
+  InboundIPv4ReturnTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -398,7 +493,20 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 500
-  InboundUDPReturnTrafficNetworkAclEntry:
+  InboundIPv6ReturnTrafficNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 1024
+        To: 65535
+      Protocol: 6 # TCP
+      RuleAction : allow
+      RuleNumber : 501
+
+  InboundIPv4UDPReturnTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -410,7 +518,22 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 510
-  OutboudTrafficNetworkAclEntry:
+  InboundIPv6UDPReturnTrafficNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 1024
+        To: 65535
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 511
+
+  # ACL outbound rules
+  OutboudIPv4TrafficNetworkAclEntry:
+    # Allow allw outbound IPv4 traffic
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       CidrBlock: 0.0.0.0/0
@@ -419,6 +542,18 @@ Resources:
       Protocol: -1 # All
       RuleAction : allow
       RuleNumber : 100
+  OutboudIPv6TrafficNetworkAclEntry:
+    # Allow allw outbound IPv6 traffic
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref NetworkAcl
+      Protocol: -1 # All
+      RuleAction : allow
+      RuleNumber : 101
+
+  # Public subnet ACL associations
   Subnet1NetworkAclAssociation:
     Type: "AWS::EC2::SubnetNetworkAclAssociation"
     Properties:
@@ -434,6 +569,8 @@ Resources:
     Properties:
       SubnetId: !Ref Subnet3
       NetworkAclId: !Ref NetworkAcl
+
+  # DHCP
   DHCPOptions:
     Type: "AWS::EC2::DHCPOptions"
     Properties:
