Update security groups

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -297,7 +297,15 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
         - CidrIp: 0.0.0.0/0
+          IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+        - CidrIpv6: ::/0
           IpProtocol: tcp
           FromPort: 80
           ToPort: 80
@@ -322,6 +330,10 @@ Resources:
           IpProtocol: tcp
           FromPort: 22
           ToPort: 22
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -343,7 +355,15 @@ Resources:
           IpProtocol: udp
           FromPort: 123
           ToPort: 123
+        - CidrIpv6: ::/0
+          IpProtocol: udp
+          FromPort: 123
+          ToPort: 123
         - CidrIp: 0.0.0.0/0
+          IpProtocol: tcp
+          FromPort: 1024
+          ToPort: 65535
+        - CidrIpv6: ::/0
           IpProtocol: tcp
           FromPort: 1024
           ToPort: 65535
@@ -365,6 +385,8 @@ Resources:
       GroupDescription: Enable outbound traffic on cluster instances
       SecurityGroupEgress:
         - CidrIp: 0.0.0.0/0
+          IpProtocol: "-1"
+        - CidrIpv6: ::/0
           IpProtocol: "-1"
       Tags:
         - Key: Project
