--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -127,6 +127,10 @@ Resources:
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
+        - CidrIpv6: ::/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -159,6 +163,10 @@ Resources:
       GroupDescription: Allow endpoint traffic
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+        - CidrIpv6: ::/0
           IpProtocol: tcp
           FromPort: 443
           ToPort: 443
