--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -85,3 +85,6 @@ Resources:
 
         - { Type: A,    Name: !Sub "pf6060flmf.${Domain}", AliasTarget: { DNSName: "d1fnuznooyf4ci.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf6060flmf.${Domain}", AliasTarget: { DNSName: "d1fnuznooyf4ci.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        - { Type: A,    Name: !Sub "pf3qsqna8v.${Domain}", AliasTarget: { DNSName: "d9wzf7o52lh8l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf3qsqna8v.${Domain}", AliasTarget: { DNSName: "d9wzf7o52lh8l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
