--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -1,11 +1,8 @@
 # stacks/container-apps/augury-forecast.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Augury Forecast FARGATE execution, using the normal ECS service role
+  Augury Forecast FARGATE execution
 Parameters:
-  # ECS Cluster ################################################################
-  ECSServiceIAMRole:
-    Type: String
   # Configuration ##############################################################
   EcrImageTag:
     Type: String
@@ -31,6 +28,29 @@ Resources:
     Type: "AWS::Logs::LogGroup"
     Properties:
       RetentionInDays: 14
+  AuguryForecastExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Action:
+              - sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service:
+                - ecs-tasks.amazonaws.com
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
+      Tags:
+        - Key: Project
+          Value: augury
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
   AuguryForecastTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
@@ -56,7 +76,7 @@ Resources:
               awslogs-stream-prefix: augury-forecast
           Name: augury-forecast
       Cpu: '4096'
-      ExecutionRoleArn: !Ref ECSServiceIAMRole
+      ExecutionRoleArn: !GetAtt AuguryForecastExecutionRole.Arn
       Memory: '8192'
       NetworkMode: awsvpc
       RequiresCompatibilities:
