Start building out SNS relay to launch fargate forecasts

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -364,12 +364,18 @@ Resources:
         - Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
+        ECSCluster: !Ref ECSCluster
         EcrImageTag: !Ref AuguryEcrImageTag
         EcrRegion: !Ref EcrRegion
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         SecretsBase: !Ref SecretsBase
+        SecretsInstanceDecryptPolicyArn: !Ref SecretsInstanceDecryptPolicyArn
+        SecretsInstanceAccessPolicyArn: !Ref SecretsInstanceAccessPolicyArn
         SecretsVersion: !Ref AugurySecretsVersion
+        VPCSubnet1: !Ref VPCSubnet1
+        VPCSubnet2: !Ref VPCSubnet2
+        VPCSubnet3: !Ref VPCSubnet3
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
