Split up sections

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -37,6 +37,7 @@ Parameters:
   OpsErrorMessagesSnsTopicArn:
     Type: String
 Resources:
+  # Augury task running under Fargate
   AuguryForecastLogGroup:
     Type: "AWS::Logs::LogGroup"
     Properties:
@@ -128,6 +129,7 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TaskRoleArn: !GetAtt AuguryForecastTaskRole.Arn
+  # SNS relay for launching Fargate tasks
   AuguryForecastRelaySnsTopic:
     Type: "AWS::SNS::Topic"
   AuguryForecastRelayLambdaRole:
