--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -102,6 +102,8 @@ Resources:
               Value: !Ref SecretsBase
             - Name: AWS_SECRETS_VERSION
               Value: !Ref SecretsVersion
+            - Name: AWS_DEFAULT_REGION
+              Value: !Ref AWS::Region
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/augury.prx.org:${EcrImageTag}
           LogConfiguration:
@@ -169,7 +171,6 @@ Resources:
       Description: Launches fargate forecast executions from SNS
       Environment:
         Variables:
-          AWS_DEFAULT_REGION: !Ref AWS::Region
           ECS_CLUSTER: !Ref ECSCluster
           ECS_TASK_DEFINITION: !Ref AuguryForecastTaskDefinition
           VPC_SUBNET_1: !Ref VPCSubnet1
