--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -365,6 +365,7 @@ Resources:
             !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSCluster: !Ref ECSCluster
+        ECSServiceIAMRoleArn: !Ref ECSServiceIAMRoleArn
         EcrImageTag: !Ref AuguryEcrImageTag
         EcrRegion: !Ref EcrRegion
         EnvironmentType: !Ref EnvironmentType
@@ -376,12 +377,6 @@ Resources:
         VPCSubnet1: !Ref VPCSubnet1
         VPCSubnet2: !Ref VPCSubnet2
         VPCSubnet3: !Ref VPCSubnet3
-        OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-        OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
