Need the instance role, not the service role

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -7,7 +7,7 @@ Parameters:
   # Configuration ##############################################################
   ECSCluster:
     Type: String
-  ECSServiceIAMRoleArn:
+  ECSInstanceIAMRoleArn:
     Type: String
   EcrImageTag:
     Type: String
@@ -137,10 +137,10 @@ Resources:
         Id: AuguryForecastRelayPolicy
         Version: '2012-10-17'
         Statement:
-          - Sid: ECSServicePublish
+          - Sid: ECSInstancePublish
             Effect: Allow
             Principal:
-              AWS: !Ref ECSServiceIAMRoleArn
+              AWS: !Ref ECSInstanceIAMRoleArn
             Action:
               - sns:Publish
             Resource: !Ref AuguryForecastRelaySnsTopic
