--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -46,6 +46,8 @@ Parameters:
     Type: String
   ECSClusterArn:
     Type: String
+  ECSInstanceIAMRoleArn:
+    Type: String
   ECSServiceAutoscaleIAMRoleArn:
     Type: String
   ECSServiceIAMRole:
@@ -365,7 +367,7 @@ Resources:
             !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSCluster: !Ref ECSCluster
-        ECSServiceIAMRoleArn: !Ref ECSServiceIAMRoleArn
+        ECSInstanceIAMRoleArn: !Ref ECSInstanceIAMRoleArn
         EcrImageTag: !Ref AuguryEcrImageTag
         EcrRegion: !Ref EcrRegion
         EnvironmentType: !Ref EnvironmentType
