--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -899,6 +899,10 @@ Outputs:
     Description: >
       The Arn of the ECS cluster
     Value: !GetAtt ECSCluster.Arn
+  ECSInstanceIAMRoleArn:
+    Description: >
+      The Arn of the IAM role used by ECS instances
+    Value: !GetAtt ECSInstanceIAMRole.Arn
   ECSServiceAutoscaleIAMRoleArn:
     Description: >
       The ARN of the IAM role used for service auto scaling
