--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -318,6 +318,7 @@ Resources:
         PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSClusterArn: !GetAtt ECSClusterStack.Outputs.ECSClusterArn
+        ECSInstanceIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSInstanceIAMRoleArn
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         ECSServiceIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRoleArn
