Remove Sphinx stack

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -266,54 +266,54 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
       TimeoutInMinutes: 5
-  SphinxStack:
-    Type: "AWS::CloudFormation::Stack"
-    Condition: IsStaging
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
-      Parameters:
-        VPC: !Ref VPC
-        VPCSubnet1: !Ref VPCSubnet1
-        VPCSubnet2: !Ref VPCSubnet2
-        VPCSubnet3: !Ref VPCSubnet3
-        VPCCertificateArn:  !Ref VPCCertificateArn
-        ECSCluster: !Ref ECSCluster
-        ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
-        ECSServiceIAMRole: !Ref ECSServiceIAMRole
-        OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-        OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-        OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-        EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        SecretsBase: !Ref SecretsBase
-        EcrRegion: !Ref EcrRegion
-        EcrImageTag: !Ref NetworksEcrImageTag
-        DesiredWebs: "1"
-        DesiredWebsProduction: "1"
-        AppName: "sphinx"
-        SecretsVersion: !Ref NetworksSecretsVersion
-        ContainerPort: "3000"
-        ContainerMemory: !Ref ContainerMemory
-        ContainerMemoryReservation: !Ref ContainerMemoryReservation
-        ContainerCpu: !Ref ContainerCpu
-        HealthCheckPath: "/sessions/new"
-        SecretsInstanceDecryptPolicyArn: !Ref SecretsInstanceDecryptPolicyArn
-        SecretsInstanceAccessPolicyArn: !Ref SecretsInstanceAccessPolicyArn
-      Tags:
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "sphinx-nlb.yml"]]
-      TimeoutInMinutes: 5
+  # SphinxStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Condition: IsStaging
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue:
+  #           !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+  #     Parameters:
+  #       VPC: !Ref VPC
+  #       VPCSubnet1: !Ref VPCSubnet1
+  #       VPCSubnet2: !Ref VPCSubnet2
+  #       VPCSubnet3: !Ref VPCSubnet3
+  #       VPCCertificateArn:  !Ref VPCCertificateArn
+  #       ECSCluster: !Ref ECSCluster
+  #       ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
+  #       ECSServiceIAMRole: !Ref ECSServiceIAMRole
+  #       OpsDebugMessagesSnsTopicArn:
+  #         Fn::ImportValue:
+  #           !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #       OpsWarnMessagesSnsTopicArn:
+  #         Fn::ImportValue:
+  #           !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #       OpsErrorMessagesSnsTopicArn:
+  #         Fn::ImportValue:
+  #           !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+  #       EnvironmentType: !Ref EnvironmentType
+  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       SecretsBase: !Ref SecretsBase
+  #       EcrRegion: !Ref EcrRegion
+  #       EcrImageTag: !Ref NetworksEcrImageTag
+  #       DesiredWebs: "1"
+  #       DesiredWebsProduction: "1"
+  #       AppName: "sphinx"
+  #       SecretsVersion: !Ref NetworksSecretsVersion
+  #       ContainerPort: "3000"
+  #       ContainerMemory: !Ref ContainerMemory
+  #       ContainerMemoryReservation: !Ref ContainerMemoryReservation
+  #       ContainerCpu: !Ref ContainerCpu
+  #       HealthCheckPath: "/sessions/new"
+  #       SecretsInstanceDecryptPolicyArn: !Ref SecretsInstanceDecryptPolicyArn
+  #       SecretsInstanceAccessPolicyArn: !Ref SecretsInstanceAccessPolicyArn
+  #     Tags:
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "sphinx-nlb.yml"]]
+  #     TimeoutInMinutes: 5
   AuguryStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
