Revert to hardcoded CIDR and AZ values

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -228,8 +228,8 @@ Resources:
     DependsOn: IPv6VCPCidrBlock
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [0, !GetAZs ""]
-      CidrBlock: !Select [0, !Cidr [!GetAtt VPC.CidrBlock, 3, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
+      CidrBlock: 10.0.1.0/24
       Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
@@ -247,8 +247,8 @@ Resources:
     DependsOn: IPv6VCPCidrBlock
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [1, !GetAZs ""]
-      CidrBlock: !Select [1, !Cidr [!GetAtt VPC.CidrBlock, 3, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
+      CidrBlock: 10.0.2.0/24
       Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
@@ -266,8 +266,8 @@ Resources:
     DependsOn: IPv6VCPCidrBlock
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [2, !GetAZs ""]
-      CidrBlock: !Select [3, !Cidr [!GetAtt VPC.CidrBlock, 3, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
+      CidrBlock: 10.0.3.0/24
       Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
       Tags:
         - Key: Project
