Add UpdateReplacePolicy to subnets

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -198,6 +198,7 @@ Resources:
       VpcId: !Ref VPC
   Subnet1:
     Type: "AWS::EC2::Subnet"
+    UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Select [0, !GetAZs ""]
@@ -215,6 +216,7 @@ Resources:
           Value: !Ref AWS::StackId
   Subnet2:
     Type: "AWS::EC2::Subnet"
+    UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Select [1, !GetAZs ""]
@@ -232,6 +234,7 @@ Resources:
           Value: !Ref AWS::StackId
   Subnet3:
     Type: "AWS::EC2::Subnet"
+    UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Select [2, !GetAZs ""]
