Revert to hardcoded CIDR and AZ values

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -201,8 +201,8 @@ Resources:
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [0, !GetAZs ""]
-      CidrBlock: !Select [4, !Cidr [!GetAtt VPC.CidrBlock, 7, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
+      CidrBlock: 10.0.1.0/24
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -219,8 +219,8 @@ Resources:
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [1, !GetAZs ""]
-      CidrBlock: !Select [5, !Cidr [!GetAtt VPC.CidrBlock, 7, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
+      CidrBlock: 10.0.2.0/24
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -237,8 +237,8 @@ Resources:
     UpdateReplacePolicy: Retain
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [2, !GetAZs ""]
-      CidrBlock: !Select [6, !Cidr [!GetAtt VPC.CidrBlock, 7, 8]] # 8 CIDR bits = (32 - 8) = /24 mask
+      AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
+      CidrBlock: 10.0.3.0/24
       Tags:
         - Key: Project
           Value: platform.prx.org
