Adding kannu domain verification and cname

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1662,6 +1662,22 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub k1._domainkey.${Domain}
+  Kannu:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Kannu
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - prx.kannu.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub soundschool.${Domain}
+        - ResourceRecords:
+            - _6e1b8a4a6d26f0cc77491cfe3e2c416a.auiqqraehs.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _812f2ace0001ab6d5f847b1b513e7231.soundschool.${Domain}
   Aws:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
