--- a/dns/radiotopia.com-hosted_zone.yml
+++ b/dns/radiotopia.com-hosted_zone.yml
@@ -33,7 +33,19 @@ Resources:
             DNSName: d2f1uy6b6p179x.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Ref Domain
+          AliasTarget:
+            DNSName: d2f1uy6b6p179x.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
+          Name: !Sub www.${Domain}
+          AliasTarget:
+            DNSName: d2f1uy6b6p179x.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
           Name: !Sub www.${Domain}
           AliasTarget:
             DNSName: d2f1uy6b6p179x.cloudfront.net
