Move youthradioleaders.prx.org to CloudFront

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1374,11 +1374,18 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub generation.${Domain}
-        - ResourceRecords:
-            - youthradioleaders.prx.org.s3-website-us-east-1.amazonaws.com.
-          TTL: "300"
-          Type: CNAME
+        - Type: A
           Name: !Sub youthradioleaders.${Domain}
+          AliasTarget:
+            DNSName: d43em5aywokfv.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub youthradioleaders.${Domain}
+          AliasTarget:
+            DNSName: d43em5aywokfv.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
   Unbounce:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -1749,3 +1756,8 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _77f825fef8e66773824cae9664b30f4b.www.${Domain}
+        - ResourceRecords:
+            - _78f937ab800800d5b4e66192d62246d9.auiqqraehs.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _9784f5f1de33eb78c3db79157146f598.youthradioleaders.${Domain}
