Move prx.mx apex domain to CloudFront

--- a/dns/prx.mx-hosted_zone.yml
+++ b/dns/prx.mx-hosted_zone.yml
@@ -30,9 +30,15 @@ Resources:
         - Type: A
           Name: !Ref Domain
           AliasTarget:
-            DNSName: s3-website-us-east-1.amazonaws.com.
-            # us-east-1 hosted zone ID
-            HostedZoneId: Z3AQBSTGFYJSTF
+            DNSName: d8ufb3eqangab.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Ref Domain
+          AliasTarget:
+            DNSName: d8ufb3eqangab.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
         - ResourceRecords:
             - remix.prx.tech.
           TTL: "300"
