--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -39,12 +39,15 @@ Resources:
         - { Type: A,    Name: !Sub "pf123xyz.${Domain}", AliasTarget: { DNSName: "d123456789abc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf123xyz.${Domain}", AliasTarget: { DNSName: "d123456789abc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
+        # Wrongful Conviction
         - { Type: A,    Name: !Sub "pf4abe8aie19.${Domain}", AliasTarget: { DNSName: "d4taugigavcar.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf4abe8aie19.${Domain}", AliasTarget: { DNSName: "d4taugigavcar.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
+        # The World smark speaker
         - { Type: A,    Name: !Sub "pf78e6d33db02b.${Domain}", AliasTarget: { DNSName: "d3uiczypvym4oo.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf78e6d33db02b.${Domain}", AliasTarget: { DNSName: "d3uiczypvym4oo.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
+        # Partners
         - { Type: A,    Name: !Sub "pf7761hrish.${Domain}", AliasTarget: { DNSName: "d1hm69e0qkih2j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf7761hrish.${Domain}", AliasTarget: { DNSName: "d1hm69e0qkih2j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
@@ -74,17 +77,26 @@ Resources:
         - { Type: A,    Name: !Sub "pf0076nbvt.${Domain}", AliasTarget: { DNSName: "d1kcyqoj93gu6x.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf0076nbvt.${Domain}", AliasTarget: { DNSName: "d1kcyqoj93gu6x.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
+        # The Confessional
         - { Type: A,    Name: !Sub "pf7815naco.${Domain}", AliasTarget: { DNSName: "d2nfer7d2muc7b.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf7815naco.${Domain}", AliasTarget: { DNSName: "d2nfer7d2muc7b.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
+        # This Day in Esoteric Election History
         - { Type: A,    Name: !Sub "pf7781thda.${Domain}", AliasTarget: { DNSName: "d33abw8xtii3oc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf7781thda.${Domain}", AliasTarget: { DNSName: "d33abw8xtii3oc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
+        # 99pi
         - { Type: A,    Name: !Sub "pf9900piiv.${Domain}", AliasTarget: { DNSName: "d3dz0oifs6y76j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9900piiv.${Domain}", AliasTarget: { DNSName: "d3dz0oifs6y76j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
+        # Feeling My Flo
         - { Type: A,    Name: !Sub "pf6060flmf.${Domain}", AliasTarget: { DNSName: "d1fnuznooyf4ci.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf6060flmf.${Domain}", AliasTarget: { DNSName: "d1fnuznooyf4ci.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
-        - { Type: A,    Name: !Sub "pf3qsqna8v.${Domain}", AliasTarget: { DNSName: "d9wzf7o52lh8l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
-        - { Type: AAAA, Name: !Sub "pf3qsqna8v.${Domain}", AliasTarget: { DNSName: "d9wzf7o52lh8l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        # Mic Drop
+        - { Type: A,    Name: !Sub "pf4790mcdr.${Domain}", AliasTarget: { DNSName: "d22iyvcwrglwnc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf4790mcdr.${Domain}", AliasTarget: { DNSName: "d22iyvcwrglwnc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # inquisitive
+        - { Type: A,    Name: !Sub "pf9919tasy.${Domain}", AliasTarget: { DNSName: "d18u1y5icut65d.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9919tasy.${Domain}", AliasTarget: { DNSName: "d18u1y5icut65d.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
