Add Criminal feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -100,3 +100,7 @@ Resources:
         # inquisitive
         - { Type: A,    Name: !Sub "pf9919tasy.${Domain}", AliasTarget: { DNSName: "d18u1y5icut65d.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9919tasy.${Domain}", AliasTarget: { DNSName: "d18u1y5icut65d.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Criminal
+        - { Type: A,    Name: !Sub "pf3qsqna8v.${Domain}", AliasTarget: { DNSName: "d9wzf7o52lh8l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf3qsqna8v.${Domain}", AliasTarget: { DNSName: "d9wzf7o52lh8l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
