--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -70,6 +70,7 @@ Resources:
                   - "kinesis:PutRecords"
                 Resource:
                   - !Ref MetricsKinesisStream
+                  - !Ref DynamodbKinesisStream
         - PolicyName: DynamodbAssumeRolePolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -144,6 +145,7 @@ Resources:
           DDB_ROLE: !Ref DynamodbAccessRole
           DDB_TTL: !Ref DynamodbTTL
           KINESIS_STREAM: !Ref MetricsKinesisStream
+          KINESIS_RETRY_STREAM: !Ref DynamodbKinesisStream
       Handler: index.handler
       MemorySize: 256
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
