Add metrics filter for DDB retries

--- a/stacks/serverless/analytics-ingest-filters.yml
+++ b/stacks/serverless/analytics-ingest-filters.yml
@@ -136,6 +136,24 @@ Resources:
         - MetricName: !Sub "analytics_dynamodb_lookups_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
           MetricValue: $.rows
+  AnalyticsDynamodbRetriesMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.ddb = "retrying" }'
+      LogGroupName: !Ref AnalyticsDynamodbLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "analytics_dynamodb_retries_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
+  AnalyticsDynamodbMissingMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.ddb = "missing" }'
+      LogGroupName: !Ref AnalyticsDynamodbLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "analytics_dynamodb_missing_${EnvironmentTypeAbbreviation}"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
   AnalyticsDynamodbErrorsMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
